fix some errors in TableGen for RISCV target